--- a/index.html
+++ b/index.html
@@ -13,6 +13,29 @@
     <button onclick="showHide();">Empezar</button>
 </div>
 
+<body>
+	<input type="checkbox" id="btn-modal">
+	<label for="btn-modal" class="lbl-modal"> ? </label>
+	<div class="modal">
+		<div class="contenedor">
+			<header> Reglas</header>
+			<label for="btn-modal">X</label>
+			<div class="contenido">
+				<h3>Cómo jugar</h3>
+				<p>
+          El juego consiste de adivinar la palabra en 6 intentos o menos
+          <br> <br>
+
+          Cada intento debe ser una palabra válida de 5 letras.
+          <br> <br>
+
+          Después de cada intento el color de las letras cambia para mostrar qué tan cerca estás de acertar la palabra.
+        </p>
+			</div>
+		</div>
+	</div>
+</body>
+
 <div id="game-container">
     <div id="score">Score :</div>
     <div id="game" class="game">
